# opentinytask

./: .gitignore  README.md  flake.nix  package.json  package.nix  svelte.config.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/routes/: +page.svelte
