[package]
name = "opentinytask"
version = "0.0.5"
description = "Opensource Alternative to TinyTask"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.141"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2.9.0"
